--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,24 @@
 {
-  "rewrites": [
-    {
-      "source": "/((?!uploads/).*)",
-      "destination": "/index.html"
+  "functions": {
+    "src/**/*.tsx": {
+      "maxDuration": 30
     }
-  ],
+  },
   "headers": [
     {
-      "source": "/uploads/(.*)",
+      "source": "/(.*)",
       "headers": [
         {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
         }
       ]
     }
