--- a/vercel.json
+++ b/vercel.json
@@ -26,5 +26,18 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/sendReport.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "cron": {
+    "jobs": [
+      {
+        "path": "/api/sendReport",
+        "schedule": "30 15 * * *"
+      }
+    ]
+  }
 } 
