Made crons ready

--- a/vercel.json
+++ b/vercel.json
@@ -28,9 +28,7 @@
     }
   ],
   "functions": {
-    "api/sendReport.js": {
-      "runtime": "nodejs@18.x"
-    }
+    "api/sendReport.js": {}
   },
   "crons": [
     {
